# NumLab

./: .gitignore  LICENSE  README.md  automata.py  example_grammar.gm  exceptions.py  generic_ast.py  grammar.py  parser.py  pyproject.toml  regex_atmt.py  terminal_set.py  tokenizer.py
.github/ISSUE_TEMPLATE/: bug.md  nuevo-feature.md
.github/workflows/: tests.yml
numlab/: __init__.py  exceptions.py  grammar.py  main.py  nl_ast.py  nl_builders.py  nl_grammar.gm  nl_lr1_table  nl_optimizer.py  nl_tokenizer.py  nlre.py  numlab_grammar.gm
numlab/automata/: __init__.py  automata.py  state.py  transition.py
numlab/builtin/: __init__.py  nl_bool.py  nl_built_in_functions.py  nl_dict.py  nl_float.py  nl_func.py  nl_int.py  nl_list.py  nl_none.py  nl_object.py  nl_set.py  nl_str.py  nl_tuple.py
numlab/compiler/: __init__.py  generic_ast.py  grammar.py  grammar_ops.py  parser.py  parser_manager.py  terminal_set.py  tokenizer.py
numlab/ia/: genetic_alg.py
numlab/lang/: context.py  type.py  visitor.py
numlab/nl_builtins/: __init__.py  nl_built_in_functions.py  nl_dict.py  nl_float.py  nl_generator.py  nl_int.py  nl_list.py  nl_object.py  nl_slice.py  nl_str.py  nl_tuple.py
numlab/nl_types/: __init__.py  nl_bool.py  nl_built_in_functions.py  nl_dict.py  nl_float.py  nl_func.py  nl_generator.py  nl_instance.py  nl_int.py  nl_list.py  nl_object.py  nl_set.py  nl_slice.py  nl_str.py  nl_string.py  nl_tuple.py
numlab/optimization/: optimizer.py  (+1 more)
tests/: test_ast.py  test_automata.py  test_grammar.py  test_nlre.py  test_parser.py  test_regex_atmt.py  test_tokenizer.py
(+30 files in other folders)
