[tool.poetry]
name = "numlab"
version = "0.1.0"
description = "Programming language for analyzing mathematical numerical problem's solutions"
authors = [
	"Jorge Morgado Vega <jorge.morgadov@gmail.com>",
	"Roberto García Rodriguez <roberto.garcia@matcom.uh.cu>",
	"Jessica Núñez Hernández <jessica.nuñez@matcom.uh.cu>",
	"Jaime Pérez <jaime.perez@matcom.uh.cu>"
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
